fix(ui5-tabcontainer): bottom align tabs when no additional text is available
Tabs are bottom aligned even when there is no additional text

--- a/packages/main/src/themes/TabInStrip.css
+++ b/packages/main/src/themes/TabInStrip.css
@@ -229,6 +229,11 @@
 	display: flex;
 }
 
+.ui5-tab-strip-itemAdditionalText-hidden {
+	visibility: hidden ;
+	margin-top: 1.25rem;
+}
+
 .ui5-tab-strip-item--inline .ui5-tab-strip-itemAdditionalText + .ui5-tab-strip-itemText {
 	display: inline;
 }
